src/syntax/parser/snapshots/hebi__syntax__parser__tests__call_expr.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Call(
    Call {
        target: GetVar(
            GetVar {
                name: "a",
            },
        ),
        args: Args {
            pos: [
                GetVar(
                    GetVar {
                        name: "b",
                    },
                ),
                GetVar(
                    GetVar {
                        name: "c",
                    },
                ),
            ],
            kw: [
                (
                    "d",
                    GetVar(
                        GetVar {
                            name: "e",
                        },
                    ),
                ),
                (
                    "f",
                    GetVar(
                        GetVar {
                            name: "g",
                        },
                    ),
                ),
            ],
        },
    },
)
