src/syntax/parser/snapshots/hebi__syntax__parser__tests__class_self_and_super-10.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
cannot access `super` in a class with no parent class
| print [4;31msuper[0m


