src/syntax/parser/snapshots/hebi__syntax__parser__tests__class_self_and_super-11.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
cannot access `super` outside of a class method that takes `self`
| v = [4;31msuper[0m


