src/syntax/parser/snapshots/hebi__syntax__parser__tests__class_self_and_super-3.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
cannot access `self` outside of class method
| v = [4;31mself[0m


