src/syntax/parser/snapshots/hebi__syntax__parser__tests__class_self_and_super-6.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
cannot access `super` outside of class method
| [4;31msuper[0m


