src/syntax/parser/snapshots/hebi__syntax__parser__tests__class_self_and_super-9.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
cannot access `super` in a class with no parent class
| v = [4;31msuper[0m


