src/syntax/parser/snapshots/hebi__syntax__parser__tests__class_self_and_super.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Class(
            Class {
                name: Ident(
                    "T",
                ),
                parent: None,
                members: ClassMembers {
                    fields: [],
                    methods: [
                        Func {
                            name: Ident(
                                "f",
                            ),
                            params: Params {
                                has_self: true,
                                pos: [],
                            },
                            body: [
                                Print(
                                    Print {
                                        values: [
                                            GetSelf,
                                        ],
                                    },
                                ),
                            ],
                            has_yield: false,
                        },
                    ],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: Ident(
                    "T",
                ),
                parent: Some(
                    Ident(
                        "U",
                    ),
                ),
                members: ClassMembers {
                    fields: [],
                    methods: [
                        Func {
                            name: Ident(
                                "f",
                            ),
                            params: Params {
                                has_self: true,
                                pos: [],
                            },
                            body: [
                                Print(
                                    Print {
                                        values: [
                                            GetSelf,
                                            GetSuper,
                                        ],
                                    },
                                ),
                            ],
                            has_yield: false,
                        },
                    ],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: Ident(
                    "T",
                ),
                parent: Some(
                    Ident(
                        "U",
                    ),
                ),
                members: ClassMembers {
                    fields: [],
                    methods: [],
                    meta: [
                        (
                            Init,
                            Func {
                                name: Ident(
                                    "init",
                                ),
                                params: Params {
                                    has_self: true,
                                    pos: [],
                                },
                                body: [
                                    Expr(
                                        SetField(
                                            SetField {
                                                target: GetField {
                                                    target: GetSelf,
                                                    name: Ident(
                                                        "v",
                                                    ),
                                                },
                                                value: Call(
                                                    Call {
                                                        target: GetField(
                                                            GetField {
                                                                target: GetSuper,
                                                                name: Ident(
                                                                    "f",
                                                                ),
                                                            },
                                                        ),
                                                        args: [],
                                                    },
                                                ),
                                            },
                                        ),
                                    ),
                                ],
                                has_yield: false,
                            },
                        ),
                    ],
                },
            },
        ),
    ],
}
