src/syntax/parser/snapshots/hebi__syntax__parser__tests__class_stmt-2.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
invalid indentation
| [4;31mT[0m: pass


